--- a/wp-content/themes/yana/package.json
+++ b/wp-content/themes/yana/package.json
@@ -20,5 +20,8 @@
     "@roots/bud-sass": "^5.7.6",
     "@roots/sage": "5.7.6",
     "bootstrap": "^5.1.3"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.8.1"
   }
 }
